--- a/tensorflow/core/framework/BUILD
+++ b/tensorflow/core/framework/BUILD
@@ -109,6 +109,7 @@ exports_files(
         "function.proto",
         "graph.proto",
         "graph_transfer_info.proto",
+        "input_pipeline_analysis.proto",
         "kernel_def.proto",
         "log_memory.proto",
         "node_def.proto",
@@ -1240,6 +1241,16 @@ tf_proto_library(
 )
 
 tf_proto_library(
+    name = "input_pipeline_analysis_proto",
+    srcs = ["input_pipeline_analysis.proto"],
+    cc_api_version = 2,
+    make_default_target_header_only = True,
+    protodeps = [
+        ":graph_proto",
+    ],
+)
+
+tf_proto_library(
     name = "node_def_proto",
     srcs = ["node_def.proto"],
     cc_api_version = 2,
@@ -1491,6 +1502,7 @@ tf_proto_library(
         ":log_memory_proto",
         ":node_def_proto",
         ":op_def_proto",
+        ":input_pipeline_analysis_proto",
         ":reader_base_proto",
         ":remote_fused_graph_execute_info_proto",
         ":resource_handle_proto",
