--- a/tensorflow/core/BUILD
+++ b/tensorflow/core/BUILD
@@ -217,6 +217,7 @@ FRAMEWORK_PROTO_SRCS = [
     "//tensorflow/core/framework:log_memory.proto",
     "//tensorflow/core/framework:node_def.proto",
     "//tensorflow/core/framework:op_def.proto",
+    "//tensorflow/core/framework:input_pipeline_analysis.proto",
     "//tensorflow/core/framework:reader_base.proto",
     "//tensorflow/core/framework:remote_fused_graph_execute_info.proto",
     "//tensorflow/core/framework:resource_handle.proto",
